2022-09-29T16:35:08Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3153025652
* notice: last 14d: unq all: 1 28
* notice: prev accum: outdated-unq outdated-all / unq all: 38 149 / 53 178
* notice: next accum: outdated-unq outdated-all / unq all: 39 151 / 53 179
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-15] / []

2022-09-29T08:31:03Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3149788725
* notice: last 14d: unq all: 1 29
* notice: prev accum: outdated-unq outdated-all / unq all: 38 149 / 52 178
* notice: next accum: outdated-unq outdated-all / unq all: 38 149 / 53 178
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-15 2022-09-29]

2022-09-29T02:22:50Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3148219345
* notice: last 14d: unq all: 1 29
* notice: prev accum: outdated-unq outdated-all / unq all: 36 146 / 51 176
* notice: next accum: outdated-unq outdated-all / unq all: 38 149 / 52 178
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-14] / []

2022-09-28T16:36:47Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3145299911
* notice: last 14d: unq all: 1 30
* notice: prev accum: outdated-unq outdated-all / unq all: 36 146 / 52 176
* notice: next accum: outdated-unq outdated-all / unq all: 36 146 / 51 176
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-09-14 2022-09-28]

2022-09-28T08:31:20Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3141998036