@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-29T16:35:08Z",
+  "timestamp" : "2022-09-30T02:38:41Z",
   "count_outdated" : 151,
   "uniques_outdated" : 39,
-  "count" : 179,
+  "count" : 180,
   "uniques" : 53,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
