@@ -1,3 +1,11 @@
+2022-09-30T02:38:41Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3155936819
+* notice: last 14d: unq all: 1 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 39 151 / 53 179
+* notice: next accum: outdated-unq outdated-all / unq all: 39 151 / 53 180
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-29]
+
 2022-09-29T16:35:08Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3153025652
 * notice: last 14d: unq all: 1 28
